updates for youtube links

--- a/_posts/2010-08-10-ingen-super-ses-exhaust-leak-on-nissan-350z.html
+++ b/_posts/2010-08-10-ingen-super-ses-exhaust-leak-on-nissan-350z.html
@@ -8,7 +8,7 @@ categories:
 redirect_from: 
     - "/Articles/itemId/473/Ingen-Super-SES-Exhaust-Leak-on-Nissan-350z"
 ---
-<p>[YouTube:WLbs5h7oXWo]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/WLbs5h7oXWo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>So I spent the afternoon yesterday trying to repair a leak in the Injen Super SES Exhaust system that was on the 350z when I purchased the car back in January. Sometime in March the exhaust started leaking and it has slowly gotten worse. Normally I would of just scrapped it and put something else on, but with all the life changes (new job, moved to California, trying to sell the house in Colorado, prepping for our first child) we’ve been going through the budget hasn’t allowed for that at this point.</p>
 
@@ -28,4 +28,4 @@ redirect_from:
 
 <p>And of course, in honor of Project240z.com, the video is above, I put it together from the work yesterday (After working on cleaning up the garage to make room for the car first). I also created a video of tonight’s work while I installed the pipe back in.</p>
 
-<p>[YouTube:Y4W4jK2A3AY]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/Y4W4jK2A3AY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
