--- a/_posts/2010-12-06-injen-super-ses-exhaust-removal-oem-350z-exhaust-installation.html
+++ b/_posts/2010-12-06-injen-super-ses-exhaust-removal-oem-350z-exhaust-installation.html
@@ -14,7 +14,7 @@ redirect_from:
 
 <p>I’ve had the exhaust sitting in my garage for a month or more, and finally got around to making room to get the car in and up on jackstands so that I could take the POS Injen system off the car. In the spirit of all the videos I used to do for Project240z.com (and for all the future videos I plan to do here) I’ve done another time lapse. Here’s the <a target="_blank" href="http://www.youtube.com/watch?v=uulSUF6BUVk">YouTube video</a>, you can hear the Injen exhaust as I back in, the car without any exhaust system connected to the cats, and then the OEM exhaust. (the first part of the video is me cleaning up the garage, much needed so I could make room for the car)</p>
 
-<p>[YouTube:uulSUF6BUVk]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/uulSUF6BUVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>I must say, I kind of liked the sound of the car when I fired it up without any exhaust (dumping at the cats), though I’m sure my neighbors didn’t care for it, and I’m 100% positive the police wouldn’t like me driving around like that either. The stock exhaust is far too quiet, but it will have to do for now.</p>
 
