--- a/_posts/2011-02-19-sfrscca-divisional-2011-day-1.html
+++ b/_posts/2011-02-19-sfrscca-divisional-2011-day-1.html
@@ -18,7 +18,7 @@ redirect_from:
 
 <p>Let me tell you this, Kumho V710s don’t work well when it is &lt;40 degrees and raining. My first run I went out and it felt horrible, I turned a 66.*, I wasn’t too thrilled about that. Here’s a video of that run.</p>
 
-<p>[YouTube:WV9E75Gkc-Y]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/WV9E75Gkc-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>But I was too lazy to go get my street tires (<a href="http://www.project350z.com/Articles/itemId/502/Night-before-the-Project-350zrsquos-first-divisi.aspx">freshly mounted the previous night mind you</a>). Big mistake, I went out on my second run and decided I would take things slower, expecting to actually go around the course faster. I slowed down and ran a 69.*. That broke this camel’s back, I ran off to get my street wheels, drill, and jack so that I could swap to the Falken Azenis RT-615s.</p>
 
@@ -28,4 +28,4 @@ redirect_from:
 
 <p>Here’s a video of the third run</p>
 
-<p>[YouTube:cGIZVNTaNbU]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/cGIZVNTaNbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
