--- a/_posts/2016-02-29-how-to-drop-40lbs-from-your-2003-350z-new-seats.html
+++ b/_posts/2016-02-29-how-to-drop-40lbs-from-your-2003-350z-new-seats.html
@@ -12,7 +12,7 @@ redirect_from:
 
 <p>In prep for STU I want to see what kind of weight I can get out of the car, I really don&rsquo;t know if this car (2003 Touring) can come anywhere close to what my first one (2003 Enthusiast, 3075lbs) weighed, or even the second one (2004 enthusiast, 3062). I have yet to get it up on the scales, but I assume going into this that the car is heaver than both of them. The power, heated, leather seats that came with the car, along with the potential extra stereo equipment, and electronics for the VDC mean the car likely weighs a good bit heaver than the previous cars.</p>
 
-<p>[YouTube:SeUIINn3O50]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/SeUIINn3O50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>A week or two ago I headed out to Solo Performance to try on a few different seats. I wanted something that would drop weight, and add some rigidity and support. SPS has quite the selection of seats, and had an <a href="http://soloperformance.com/NRG-Innovations-FRP-310-Racing-Bucket-Seat--Medium_p_11673.html" target="_blank">NRG Innovations FRP-310</a>, which is their medium, fixed back seat. I&rsquo;m 6&rsquo;4&rdquo; and weight 250lbs (working on dropping that weight as well), and I actually fit semi-comfortably in this seat. I chose to go with the <a href="http://soloperformance.com/NRG-Innovations-FRP-300-Racing-Bucket-Seat--Large_p_11672.html" target="_blank">NRG Innovations FRP-300</a> instead however, this seat is the Large version of the one that SPS had in the shop.</p>
 
