--- a/_posts/2011-02-13-san-francisco-region-scca-boondoggle-2011-results.html
+++ b/_posts/2011-02-13-san-francisco-region-scca-boondoggle-2011-results.html
@@ -13,11 +13,11 @@ redirect_from:
 
 <p>Here&rsquo;s video of my first run, 42.7** seconds, 2 cones. Check out some of that inside tire spin, a definite sign that I need to get a new LSD.</p>
 
-<p>[YouTube:U7MrArldr9M]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/U7MrArldr9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>Here&rsquo;s my fourth run, I wish I had adjusted the rear camera a bit better, but I can&rsquo;t change that now.</p>
 
-<p>[YouTube:xtcxoTIstr8]</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/xtcxoTIstr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 <p>I was shooting video with the <a href="http://www.chasecam.com" target="_blank">ChaseCam</a> and my original GoPro, my GoPro HD had some issues and no longer works. I&rsquo;m hoping I can get a replacement for it ASAP as next weekend is a two day divisional also being held at Great America, though fortunately this time on a bigger lot, today was awful cramped mid day when all the second session drivers and first session drivers were trying to park and such.</p>
 
