deploy: dc94479531defab548b6a7fc21b133dc374e2db1

--- a/how-to-drop-40lbs-from-your-2003-350z-new-seats.html
+++ b/how-to-drop-40lbs-from-your-2003-350z-new-seats.html
@@ -326,7 +326,17 @@
 										weighs a good bit heaver than the previous cars.
 									</p>
 
-									<p>[YouTube:SeUIINn3O50]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/SeUIINn3O50"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										A week or two ago I headed out to Solo Performance to try on
