--- a/mounting-a-video-camera-behind-your-car.html
+++ b/mounting-a-video-camera-behind-your-car.html
@@ -392,7 +392,17 @@
 										well.
 									</p>
 
-									<p>[YouTube:StTNNow9F74]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/StTNNow9F74"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										That is video of my 4th run today. I had cone issues all day
