--- a/page16/index.html
+++ b/page16/index.html
@@ -384,7 +384,7 @@
 												>Ingen Super SES Exhaust Leak on Nissan 350z</a
 											>
 										</h2>
-										<h4 class="card-text">[YouTube:WLbs5h7oXWo]</h4>
+										<h4 class="card-text"></h4>
 									</div>
 									<div class="card-footer bg-white">
 										<div class="wrapfooter">
