--- a/san-francisco-region-scca-boondoggle-2011-results.html
+++ b/san-francisco-region-scca-boondoggle-2011-results.html
@@ -335,14 +335,34 @@
 										that I need to get a new LSD.
 									</p>
 
-									<p>[YouTube:U7MrArldr9M]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/U7MrArldr9M"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										Here&rsquo;s my fourth run, I wish I had adjusted the rear
 										camera a bit better, but I can&rsquo;t change that now.
 									</p>
 
-									<p>[YouTube:xtcxoTIstr8]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/xtcxoTIstr8"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										I was shooting video with the
