--- a/sfrscca-divisional-2011-day-1.html
+++ b/sfrscca-divisional-2011-day-1.html
@@ -338,7 +338,17 @@
 										that. Here’s a video of that run.
 									</p>
 
-									<p>[YouTube:WV9E75Gkc-Y]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/WV9E75Gkc-Y"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										But I was too lazy to go get my street tires (<a
@@ -367,7 +377,17 @@
 
 									<p>Here’s a video of the third run</p>
 
-									<p>[YouTube:cGIZVNTaNbU]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/cGIZVNTaNbU"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 								</div>
 
 								<!-- Rating -->
