--- a/injen-super-ses-exhaust-removal-oem-350z-exhaust-installation.html
+++ b/injen-super-ses-exhaust-removal-oem-350z-exhaust-installation.html
@@ -341,7 +341,17 @@
 										up the garage, much needed so I could make room for the car)
 									</p>
 
-									<p>[YouTube:uulSUF6BUVk]</p>
+									<p>
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/uulSUF6BUVk"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+											allowfullscreen
+										></iframe>
+									</p>
 
 									<p>
 										I must say, I kind of liked the sound of the car when I
