--- a/2023-nissan-z.html
+++ b/2023-nissan-z.html
@@ -337,7 +337,7 @@
 
 									<a
 										class="next d-block col-md-6 text-lg-right"
-										href="/st-louis-race-gear"
+										href="/where-to-get-a-race-helmet-in-st-louis"
 										>St Louis Race Gear &raquo;
 									</a>
 
