deploy: fda5820742a3a274519a3da1cd99d8b0de25cd8c

--- a/2023-nissan-z.html
+++ b/2023-nissan-z.html
@@ -337,7 +337,7 @@
 
 									<a
 										class="next d-block col-md-6 text-lg-right"
-										href="/where-to-get-a-race-helmet-in-st-louis"
+										href="/st-louis-race-gear"
 										>St Louis Race Gear &raquo;
 									</a>
 
