--- a/st-louis-race-gear.html
+++ b/st-louis-race-gear.html
@@ -390,12 +390,15 @@
 								<div
 									class="row PageNavigation d-flex justify-content-between font-weight-bold"
 								>
+									<a class="prev d-block col-md-6" href="/2023-nissan-z">
+										&laquo; The 2023 Nissan Z</a
+									>
+
 									<a
-										class="prev d-block col-md-6"
+										class="next d-block col-md-6 text-lg-right"
 										href="/where-to-get-a-race-helmet-in-st-louis"
-									>
-										&laquo; St Louis Race Gear</a
-									>
+										>Where to buy a race helmet in St. Louis? &raquo;
+									</a>
 
 									<div class="clearfix"></div>
 								</div>
