deploy: b24d0f8c9d2f2d4323bf6acb940b3c6b1b432303

--- a/where-to-get-a-race-helmet-in-st-louis.html
+++ b/where-to-get-a-race-helmet-in-st-louis.html
@@ -364,7 +364,8 @@
 									</h1>
 									<p>
 										Absolutely you can buy a helmet online.
-										<a href="https://www.soloperformance.com/"
+										<a
+											href="https://soloperformance.com/collections/helmets-and-accessories"
 											>SoloPerformance.com</a
 										>
 										has one of the largest selections of helmets online, they
