updates for urls

--- a/_posts/2016-07-11-2016-wilmington-prosolo-#1-and-the-2016-spring-nationals-prosolo-and-champ-tour.html
+++ b/_posts/2016-07-11-2016-wilmington-prosolo-#1-and-the-2016-spring-nationals-prosolo-and-champ-tour.html
@@ -8,6 +8,7 @@ image:
 categories:
 redirect_from: 
     - "/Articles/itemId/570/2016-Wilmington-ProSolo-#1-and-the-2016-Spring-N"
+    - "/Articles/itemId/570/2016-Wilmington-ProSolo-1-and-the-2016-Spring-Nat"
 ---
 <p>So here we are, another month has gone by since the last blog post, time for an update here on the status of <a href="http://twitter.com/project350z" target="_blank">@Project350z</a>.</p>
 <p>TL;DR: Crap</p>
