--- a/_posts/2012-11-02-2004-nissan-350z-enthusiast-model-for-sale-half-moon-bay-ca-sold.html
+++ b/_posts/2012-11-02-2004-nissan-350z-enthusiast-model-for-sale-half-moon-bay-ca-sold.html
@@ -7,6 +7,7 @@ image:
 categories:
 redirect_from: 
     - "/Articles/itemId/554/2004-Nissan-350z-Enthusiast-model-for-sale-Half-"
+    - "/Articles/itemId/554/2004-Nissan-350z-Enthusiast-model-for-sale-Half-M"
 ---
 <h2>(SOLD)</h2>  The time is nearing for when the 350z must be sold, so if you are interested hit me up 2004 350z Enthusiast, &lt;75k miles, currently sits stock other than a K&amp;N CAI and a Plenum spacer, and a grounding kit (installed by previous owner).
 <br />  <br />  Also has a receiver mounted to the rear bumper that I use for a bike rack.
