updates for urls

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ redirect_from:
     - "Home/catpageid/7"
     - "Home/catpageid/8"
     - "Home/catpageid/9"
+    - "itemlink.aspx"
 ---
 
 {% if page.url == "/" %}
