deploy: bffd0e426f7baa97ffd65e662aa839226a0893f9

--- a/20-years-ago-today.html
+++ b/20-years-ago-today.html
@@ -318,6 +318,11 @@
 									</p>
 
 									<p>
+										The last photo is of the 99 Z-28 that I traded in that day
+										for the 350Z.
+									</p>
+
+									<p>
 										<img
 											src="/assets/images_out/April2003/April2003-1-800-14d426070.jpg"
 											srcset="
