deploy: c0b64f8d8fbc6c95a92ea0b373552ffa57cb9506

--- a/20-years-ago-today.html
+++ b/20-years-ago-today.html
@@ -443,6 +443,13 @@
 										&laquo; Where to buy a race helmet in St. Louis?</a
 									>
 
+									<a
+										class="next d-block col-md-6 text-lg-right"
+										href="/2023-06-12-2023-chris-hammond/"
+									>
+										&raquo;
+									</a>
+
 									<div class="clearfix"></div>
 								</div>
 								<!-- End Categories -->
