deploy: 9cc8b099601b1a0ef5df56a307c35ef39eb4fc08

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 		<meta property="og:locale" content="en_US" />
 		<meta
 			name="description"
-			content="A Nissan 350z project originally prepped for autocross."
+			content="This content has all moved to AutocrossBlog.com"
 		/>
 		<meta
 			property="og:description"
-			content="A Nissan 350z project originally prepped for autocross."
+			content="This content has all moved to AutocrossBlog.com"
 		/>
 		<meta
 			property="og:site_name"
@@ -53,7 +53,7 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "WebSite",
-				"description": "A Nissan 350z project originally prepped for autocross.",
+				"description": "This content has all moved to AutocrossBlog.com",
 				"headline": "Home",
 				"name": "Project350z.com - Autocrossing a Nissan 350z",
 				"publisher": {
@@ -205,7 +205,8 @@
 				<div class="mainheading">
 					<h1 class="sitetitle">Project350z.com</h1>
 					<p class="lead">
-						A Nissan 350z project originally prepped for autocross.
+						This content has all moved to
+						<a href="https://www.autocrossblog.com/">AutocrossBlog.com</a>
 					</p>
 				</div>
 
