--- a/page19/index.html
+++ b/page19/index.html
@@ -37,11 +37,11 @@
 		<meta property="og:locale" content="en_US" />
 		<meta
 			name="description"
-			content="A Nissan 350z project originally prepped for autocross."
+			content="This content has all moved to AutocrossBlog.com"
 		/>
 		<meta
 			property="og:description"
-			content="A Nissan 350z project originally prepped for autocross."
+			content="This content has all moved to AutocrossBlog.com"
 		/>
 		<meta
 			property="og:site_name"
@@ -55,7 +55,7 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "WebPage",
-				"description": "A Nissan 350z project originally prepped for autocross.",
+				"description": "This content has all moved to AutocrossBlog.com",
 				"headline": "Home",
 				"publisher": {
 					"@type": "Organization",
@@ -206,7 +206,8 @@
 				<div class="mainheading">
 					<h1 class="sitetitle">Project350z.com</h1>
 					<p class="lead">
-						A Nissan 350z project originally prepped for autocross.
+						This content has all moved to
+						<a href="https://www.autocrossblog.com/">AutocrossBlog.com</a>
 					</p>
 				</div>
 
