deploy: be729edb9662facfcd06b406d942d7cb05508132

--- a/page2/index.html
+++ b/page2/index.html
@@ -275,17 +275,15 @@
 							<div class="col-lg-4 col-md-6 mb-30px card-group">
 								<div class="card h-100">
 									<div class="maxthumb">
-										<a
-											href="/stu-2003-nissan-350z-for-sale&ndash;project350z-v3"
-										>
+										<a href="/stu-2003-nissan-350z-for-sale-project350z-v3">
 										</a>
 									</div>
 									<div class="card-body">
 										<h2 class="card-title">
 											<a
 												class="text-dark"
-												href="/stu-2003-nissan-350z-for-sale&ndash;project350z-v3"
-												>STU 2003 Nissan 350z For Sale&ndash;Project350z V3</a
+												href="/stu-2003-nissan-350z-for-sale-project350z-v3"
+												>STU 2003 Nissan 350z For Sale-Project350z V3</a
 											>
 										</h2>
 										<h4 class="card-text">
@@ -300,7 +298,7 @@
 
 											<span class="post-read-more"
 												><a
-													href="/stu-2003-nissan-350z-for-sale&ndash;project350z-v3"
+													href="/stu-2003-nissan-350z-for-sale-project350z-v3"
 													title="Read Story"
 													><svg
 														class="svgIcon-use"
