--- a/project350z-2-is-gone.html
+++ b/project350z-2-is-gone.html
@@ -4,17 +4,17 @@
 	<title>Redirecting&hellip;</title>
 	<link
 		rel="canonical"
-		href="https://www.autocrossblog.com/project350z-#2-is-gone"
+		href="https://www.autocrossblog.com/project350z-2-is-gone"
 	/>
 	<script>
-		location = "https://www.autocrossblog.com/project350z-#2-is-gone";
+		location = "https://www.autocrossblog.com/project350z-2-is-gone";
 	</script>
 	<meta
 		http-equiv="refresh"
-		content="0; url=https://www.autocrossblog.com/project350z-#2-is-gone"
+		content="0; url=https://www.autocrossblog.com/project350z-2-is-gone"
 	/>
 	<h1>Redirecting&hellip;</h1>
-	<a href="https://www.autocrossblog.com/project350z-#2-is-gone"
+	<a href="https://www.autocrossblog.com/project350z-2-is-gone"
 		>Click here if you are not redirected.</a
 	>
 </html>
